# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
ch02/: Untitled.ipynb  chapter2.py  section2.1-2.4.ipynb  section2.5.ipynb  section2.6.ipynb  section2.7.ipynb  section2.8.ipynb  step-1.ipynb
ch02/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
llm_scratch/: __init__.py  dataset.py  device.py  tokenizer.py
scripts/: check_radeon_9070xt_pytorch.py
