[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Learning LLMs from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.2"
explicit = true
