[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Learning LLMs from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "notebook",
  "torch==2.9.1",
  "torchvision==0.24.0",
  "torchaudio==2.9.0",
]

[tool.uv]
find-links = ["https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.3/"]
